# -bazel_python

./: .gitignore  MODULE.bazel  bazel-bazel_python  bazel-bin  bazel-out  bazel-testlogs  requirements.txt
app/: BUILD.bazel  main.py
common/: BUILD.bazel  calculator_test.py
