module(name = "python-example")

# Bazel deps
bazel_dep(name = "rules_python", version = "0.26.0")

# Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_versions")

# Pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bazel_pip_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "bazel_pip_deps")
use_repo(python, "python_3_11")
